kuma/gateway/gateway.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: default-gateway-fix
spec:
  ports:
  - name: "80"
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: default-gateway
  type: NodePort
